# Projects

./: 32545.py  Beer.py  Except.py  addressbook.pkl  args_kwargs.py  boolean.py  caesar.py  factorial.py  guess.py  list100.py  local_global.py  main.py  main1.py  math_random.py  names.txt  requirements.txt
JokeTask/: main.py
OlegAndrus/: README.md
OlegAndrus/module06/moskali/: README.md  setup.cfg
OlegAndrus/module06/moskali/moskali/: cli.py  loader.py  moskali.json  render.py  stats.py
Temperatures/: main.py  processing.py  temperatures.txt
goit-pycore-hw-08/: addressbook.pkl  bot_phonebook.py
homeworkYDP1/: Phone_OK.py  cong_birthday.py  days_counter.py  lottery.py
homeworkYDP2/: Cats_base.py  Salaries.py  helper_bot.py  tree_color.py
homeworkYDP3/: fibonacci.py  gen_income.py  helper_bot_decor.py
homeworkYDP4/: phonebook.py
homeworkYDP5/: phonebook_added.py
homeworkYDP7/: addressbook.pkl  bot_phonebook.py
module05/: file_test.txt  files_rwa+.py  library_path.py  log_analyser.py  namess.py  regular_examples.py  regular_str.py  regylar_translate.py  report2.txt
module06/: arg.py  log.py  mymodule.py  packages.py
module06_env/: colortext.py
module07/: collections_nt_c_dict.py  decimal_int.py  dequ_que.py  gen_yeld.py
module08/: closure_currying.py  decorat_.py  lambda_map.py
module09/: contactbook.py  oop_class.py  user_dict.py
module10/: 12222.py  get_set_item.py  getter_setter.py  getter_setter2.py  iter_next.py  repr_list.py
module11/: 211554.py
module2/: Def_f.py  boolean.py  caars.py  croissans.py  for_while.py  list100.py  (+1 more)
(+102 files in other folders)
