[metadata]
name = moskali
version = 6.0.0
description = Console tool to visualize Russian military losses data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andrusoleg/moskali
author = Oleh Andrus
author_email = andrusoleg123@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Environment :: Console
    Topic :: Utilities

[options]
packages = find_namespace:
install_requires =
    rich>=13.0
    plotext>=5.0
include_package_data = true

[options.package_data]
* = *.json

[options.entry_points]
console_scripts =
    moskali = moskali.cli:main

[options.packages.find]
where = .
